First prototype version

--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,9 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+
+.block-language-d3 {
+	padding: 0.4em;
+	border: 2px solid grey;
+	border-radius: 5px;
+}
